Allow price input from user
* Add numeric input from user through a form
* Only render a table on form submission
* Hard code price range to be from price to 1.5 * price
* Render price as a number with two decimal places

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <script src="index.js"></script>
   </head>
   <body>
+    <form id="lookup">
+      <input type="number" placeholder="How much to free delivery?" step="0.01" required>
+      <input type="submit" value="Find">
+    </form>
     <table id="items">
       <thead>
         <th>Product</th>
