--- a/redmart/index.html
+++ b/redmart/index.html
@@ -1,16 +1,18 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css"/>
+    <link rel="stylesheet" type="text/css" href="index.css"/>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
     <script src="index.js"></script>
   </head>
   <body>
     <form id="lookup">
-      <input type="number" placeholder="How much to free delivery?" step="0.01" required>
+      <input type="number" placeholder="How much for free delivery?" step="0.01" required>
       <input type="submit" value="Find">
     </form>
-    <table id="items">
+    <table id="items" class="display compact">
       <thead>
         <th>Product</th>
         <th>Price</th>
