--- a/redmart/index.html
+++ b/redmart/index.html
@@ -1,10 +1,16 @@
-<html>
+<html prefix="og: http://ogp.me/ns#">
   <head>
     <title>Basket Fillers for RedMart</title>
     <meta charset="UTF-8">
     <meta name="description" content="Fill your RedMart basket for free delivery!">
     <meta name="keywords" content="RedMart,Online Shopping,Free Delivery">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:image" content="../assets/icons/basket-plus-128x128.png" />
+    <link rel="icon" type="image/png" href="../assets/icons/basket-plus-64x64.png" sizes="64x64">
+    <link rel="icon" type="image/png" href="../assets/icons/basket-plus-128x128.png" sizes="128x128">
+    <link rel="mask-icon" href="../assets/icons/basket-plus.svg" color="#000000">
+
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" type="text/css" href="index.css" />
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
