Adjust input placeholder text

--- a/redmart/index.html
+++ b/redmart/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <form id="lookup">
-      <input type="number" placeholder="How much for free delivery?" step="0.01" required />
+      <input type="number" placeholder="How much more for free delivery?" step="0.01" required />
       <input type="submit" value="Find" />
     </form>
     <table id="items" class="display compact">
