Add affiliate marketing, welcome message
* Add a blue arrow pointing at the input box
* Add welcome message for first-time users as well as
  disclosure for affiliate marketing links
* Implement the affiliate marketing link toggle
* Hide the welcome once we start looking up items

--- a/redmart/index.html
+++ b/redmart/index.html
@@ -31,5 +31,20 @@
 
       </tfoot>
     </table>
+    <div id="welcome">
+      <div><img src="../assets/icons/blue-arrow-up.svg"/></div>
+      Fallen short of free delivery on RedMart?
+      Enter how far away you are from the minimum $100 ($40 for LiveUp Members), and click Find.
+    </div>
+    <div id="disclosure">
+      <div>
+        This site uses affiliate marketing links. That means it can make a small amount of money when
+        you click on an item listed here.
+      </div>
+      <div>
+        This is currently <span id="affiliate-indicator">on</span>.
+        If you want to turn this <span id="affiliate-prompt">off</span>, click <span id="affiliate-toggle">here</span>.
+      </div>
+    </div>
   </body>
 </html>
