Switch hostname for og:image icon

--- a/redmart/index.html
+++ b/redmart/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="RedMart,Online Shopping,Free Delivery">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:image" content="https://lonerifle.github.io/basket-fillers/assets/icons/basket-plus-256x256.png" />
+    <meta property="og:image" content="https://www.basket.sg/assets/icons/basket-plus-256x256.png" />
     <link rel="icon" type="image/png" href="../assets/icons/basket-plus-64x64.png" sizes="64x64">
     <link rel="icon" type="image/png" href="../assets/icons/basket-plus-128x128.png" sizes="128x128">
     <link rel="mask-icon" href="../assets/icons/basket-plus.svg" color="#000000">
