Welcome - simplify sentence

--- a/redmart/index.html
+++ b/redmart/index.html
@@ -34,7 +34,7 @@
     <div id="welcome">
       <div><img src="../assets/icons/blue-arrow-up.svg"/></div>
       Fallen short of free delivery on RedMart?
-      Enter how far away you are from the minimum $100 ($40 for LiveUp Members), and click Find.
+      Enter how much more you need to hit $100 ($40 for LiveUp Members), and click Find.
     </div>
     <div id="disclosure">
       <div>
