--- a/redmart/index.html
+++ b/redmart/index.html
@@ -19,7 +19,10 @@
   </head>
   <body>
     <form id="lookup">
-      <input type="number" placeholder="How much more for free delivery?" min="0.01" step="0.01" required />
+      <div class="currency-input">
+        <span class="currency-symbol">$</span>
+        <input type="number" placeholder="How much more for free delivery?" min="0.01" step="0.01" required />
+      </div>
       <input type="submit" value="Find" />
     </form>
     <table id="items" class="display compact">
